2005-06-20  Mark McLoughlin  <mark@skynet.ie>

	Fixes bug #308384

	* gtk/gdk.override: make gtk.gdk.Window.set_user_data()
	accept None

2005-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygobject.c (pygobject_new_with_interfaces): Fix 
	typo in documentation string. Fixes #171910 (Tuure Laurinolli
	and Gian Mario Tagliaretti)

2005-06-17  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* examples/pango/pangocairo-simple.py (main): Demonstrate how to
	output PDF file from the same drawing subroutine.

2005-06-14  Johan Dahlin  <jdahlin@async.com.br>

	* examples/ide/edit.py: Improve demo, patch by 
	Fernando San Martin Woerner, fixes #171148

2005-06-09  Cedric Gustin  <cedric.gustin@swing.be>

	* setup.py : Define HAVE_BIND_TEXTDOMAIN_CODESET on win32.

2005-06-09  Manish Singh  <yosh@gimp.org>

	* gobject/pygobject.h
	* gtk/pygtk.h: Use G_STMT_START/END for init_ defines.

2005-06-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* pango.override (pypango_item_get_type): Define boxed type for
	PangoItem.
	(_wrap_pango_layout_line__get_runs): Override/implement getter for
	pango.LayoutLine.runs.

	* pango-types.defs (LayoutLine): Add PangoLayoutLine fields.
	(Item): Declare PangoItem as boxed type.

2005-06-06  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* examples/gtk/widget.py: Render the sample widget with cairo, if
	possible.

	* examples/pango/pangocairo-simple.py: cairosimple.c example
	ported to python.

	* examples/Makefile.am (EXTRA_DIST): Add pango/pangocairo-simple.py.

	* codegen/argtypes.py (CairoArg.write_return): Add cairo_t* argtype.

	* gtk/Makefile.am (EXTRA_DIST): Add gdkcairo.override.

	* gtk/gdk.defs: Optionally define method cairo_create of
	gtk.gdk.Drawable.

	* gtk/gdk.override (_wrap_gdk_cairo_create): Wrap gdk_cairo_create
	as method cairo_create of gtk.gdk.Drawable.

	* gtk/gdkcairo.override: If pycairo is available, define type
	gtk.gdk.CairoContext as a subclass of pangocairo.CairoContext with
	some additional methods.
